--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,12 +3,48 @@
 @tailwind utilities;
 
 
+/* @font-face {
+  font-family: "SpaceGrotesk";
+  src: url('../components/font/SpaceGrotesk-Light.ttf');
+  font-weight: lighter;
+  font-style: normal;
+} */
+@font-face {
+  font-family: "SpaceGrotesk";
+  src: url('../components/font/SpaceGrotesk-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+  
+/* @font-face {
+  font-family: "SpaceGrotesk";
+  src: url('../components/font/SpaceGrotesk-Bold.ttf');
+  font-weight: bold;
+  font-style: normal;
+}
+  
+@font-face {
+  font-family: "K2D";
+  src: url('../components/font/SpaceGrotesk-Medium.ttf');
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: "K2D";
+  src: url('../components/font/SpaceGrotesk-SemiBold.ttf');
+  font-weight:normal;
+  font-style: normal;
+} */
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family:'SpaceGrotesk', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: #373636;
+  border: none;
+  color: #FFFFFF;
 }
 
 a {
@@ -18,4 +54,9 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+
+.button1{
+  background: linear-gradient(181.23deg, #B860ED 0.31%, #EF1698 179.65%);
 }
