--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,3 +60,70 @@ a {
 .button1{
   background: linear-gradient(181.23deg, #B860ED 0.31%, #EF1698 179.65%);
 }
+
+.react-tabs__tab--selected .button2{
+  background: #3F3F3F;
+  border-bottom: 1px solid #CF95F2;
+  border-radius: 23px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Global CSS */
+.section__header{
+  font-size: 30px;
+}
+
+
+textarea {
+  resize: none;
+}
+
+
+.fade-in {
+  animation: fadeIn 300ms;
+  -webkit-animation: fadeIn 300ms;
+  -moz-animation: fadeIn 300ms;
+  -o-animation: fadeIn 300ms;
+  -ms-animation: fadeIn 300ms;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-moz-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-webkit-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-o-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-ms-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
