--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,12 +56,6 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.button1{
+  background: linear-gradient(181.23deg, #B860ED 0.31%, #EF1698 179.65%);
 }
