--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,6 +111,89 @@ textarea {
 }
 
 
+
+
+/* Modal */
+.modal__box{
+  position: fixed;
+  display: block;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin: 0 auto;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  overflow-x: hidden;
+  /* background-color: rgba(31,32,41,.75); */
+  background: rgba(55, 54, 54, 0.72);
+  /* background-color: rgba(31,32,41,.75); */
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 250ms 700ms ease;
+  
+}
+
+.modal__box-wrapper{
+  position: relative;
+  display: block;
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  /* border-radius: 4px; */
+  overflow: hidden;
+  padding-bottom: 20px;
+  background-color: #3F3F3F;
+  /* background-color: #fff; */
+    -ms-flex-item-align: center;
+    align-self: center;
+    /* box-shadow: 0 12px 25px 0 rgba(199,175,189,.25); */
+  opacity: 0;
+  transform: scale(0.6);
+  transition: opacity 250ms 250ms ease, transform 300ms 250ms ease;
+  padding: 30px 40px;
+}
+
+.modal__box-wrapper.alert--bx{
+  max-width: 400px;
+}
+
+
+.modal__box.show{
+  pointer-events: auto;
+  opacity: 1;
+  transition: all 300ms ease-in-out;
+}
+
+
+.modal__box.show .modal__box-wrapper{
+  opacity: 1;
+  transform: scale(1);
+  transition: all 300ms ease-in-out;
+}
+
+
+@media only screen and (max-width: 991px){
+  .modal__box-wrapper {
+    max-width: 700px;
+  } 
+}
+@media only screen and (max-width: 767px){
+  .modal__box-wrapper {
+    width: calc(100% - 40px);
+  } 
+}
+
+
+
+/* Fade In */
 .fade-in {
   animation: fadeIn 300ms;
   -webkit-animation: fadeIn 300ms;
