--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,6 +88,37 @@ a {
 
 /* Global CSS */
 
+.flip {
+  position: relative;
+}
+.flip > .front,
+.flip > .back {
+  display: block;
+  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition-duration: 0.5s;
+  transition-property: transform, opacity;
+}
+.flip > .front {
+  transform: rotateY(0deg);
+}
+.flip > .back {
+  position: absolute;
+  opacity: 0;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  transform: rotateY(-180deg);
+}
+.flip:hover > .front {
+  transform: rotateY(180deg);
+}
+.flip:hover > .back {
+  opacity: 1;
+  transform: rotateY(0deg);
+}
+
+
 .button-outline{
   color: #CF95F2;
   border: 1px solid #CF95F2;
@@ -103,6 +134,10 @@ a {
 }
 h3.section__header{
   font-size: 20px;
+}
+
+.voting_table{
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
 }
 
 
