--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,6 +88,61 @@ a {
 
 /* Global CSS */
 
+
+
+.category-menu{
+  display: none;
+  background: #3F3F3F;
+
+}
+
+.category-menu.show{
+  display: block;
+}
+
+.scrollbar-change::-webkit-scrollbar{
+  width: 0.1rem;
+}
+/* .category-menu::-webkit-scrollbar-track{
+  background-color: rgb(48, 47, 47) 173, 173;
+} */
+.scrollbar-change::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 1rem;
+  width: 0.1rem;
+  /* background-color: #45CD85; */
+  background: linear-gradient(180deg, #B860ED 0%, #EF1698 100%);
+
+}
+
+
+.right_border{
+  position: absolute;
+  right: 0;
+  height: 0;
+  width: 2px;
+  opacity: 0;
+  background: linear-gradient(180deg, #B860ED 0%, #EF1698 100%);
+  border-radius: 8px;
+  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition-duration: 0.5s;
+  transition-property: height, opacity;
+  /* border: 1px solid #FFFFFF; */
+}
+
+.nav__link:hover .right_border{
+  height: 100%;
+  opacity: 1;
+}
+
+.nav__link.active .right_border{
+  height: 100%;
+  opacity: 1;
+}
+
+
+
+
 .flip {
   position: relative;
 }
