--- a/styles/globals.css
+++ b/styles/globals.css
@@ -87,7 +87,44 @@ a {
 
 
 /* Global CSS */
+/* TOOLTIP */
+.tooltip {
+  position: absolute;
+  /* top: 0; */
+  /* left: -50%;
+  width: 100%; */
+  font-size: 11px;
+  /* background: #f5f5f5; */
+  background: #121216;
+  color: #fff;
+  /* color: #777; */
+  padding: 5px 8px;
+  border-radius: 5px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  min-width: max-content;
+}
 
+.tooltip::before {
+  position: absolute;
+  content: '';
+  height: 8px;
+  width: 8px;
+  background: #121216;
+  bottom: -3px;
+  left: 50%;
+  transform: translate(-50%) rotate(45deg);
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+ .tooltip {
+  top: -45px;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
 
 
 .category-menu{
