--- a/styles/globals.css
+++ b/styles/globals.css
@@ -184,6 +184,26 @@ a {
 .flip {
   position: relative;
 }
+.flip .card__link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  left: 100%;
+  z-index: 99;
+}
+/* .flip .card__link::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+} */
 .flip > .front,
 .flip > .back {
   display: block;
@@ -211,6 +231,19 @@ a {
   transform: rotateY(0deg);
 }
 
+
+@media only screen and (max-width: 991px) {
+
+  .flip > .front {
+    transform: rotateY(0deg);
+  }
+  .flip:hover > .front {
+    transform: rotateY(0deg);
+  }
+  .flip > .back {
+    display: none;
+  }
+}
 
 .button-outline{
   color: #CF95F2;
